# cpplox

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: test.yaml
src/: CMakeLists.txt  Environment.cpp  Environment.h  Errors.h  Expr.cpp  Expr.h  Function.h  Interpreter.cpp  Interpreter.h  Logger.cpp  Logger.h  Meta.h  Object.h  Parser.cpp  Parser.h  Runner.cpp  Runner.h  Scanner.cpp  Scanner.h  Stmt.cpp  Stmt.h  Token.h
test/: CMakeLists.txt  InterpreterTest.cpp  RunnerTest.cpp
